// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConfidenceBadge Snapshots > matches snapshot for high confidence 1`] = `
<div
  aria-label="High confidence: 95%"
  class="inline-flex items-center rounded-md border px-2.5 py-0.5 transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 shadow text-xs font-medium bg-green-500 hover:bg-green-600 text-white border-transparent"
>
  95
  %
</div>
`;

exports[`ConfidenceBadge Snapshots > matches snapshot for low confidence 1`] = `
<div
  aria-label="Low confidence: 55%"
  class="inline-flex items-center rounded-md border px-2.5 py-0.5 transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 shadow text-xs font-medium bg-red-500 hover:bg-red-600 text-white border-transparent"
>
  55
  %
</div>
`;

exports[`ConfidenceBadge Snapshots > matches snapshot for medium confidence 1`] = `
<div
  aria-label="Medium confidence: 75%"
  class="inline-flex items-center rounded-md border px-2.5 py-0.5 transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 shadow text-xs font-medium bg-yellow-500 hover:bg-yellow-600 text-white border-transparent"
>
  75
  %
</div>
`;
